# nebius_ai_performance_engineering

./: .gitignore  main.py  pyproject.toml
LLM_Homework_5/: week4_dt_tiny_moe_lm.ipynb
LLM_homework_1/: LLM_Architectures,_week_2_Gradient_descent_&_Pytorch.ipynb  LLM_Architectures_hometask_1.ipynb  pyproject.toml
LLM_homework_2/: RNN_LM_homework.ipynb  homework_CIFAR10.ipynb  homework_CIFAR10_part2.ipynb
LLM_homework_3/: tiny_transformer_lm.ipynb
LLM_homework_4/: homework_lora.ipynb  lora_adapter.pt
Materials/: LLM Lecture 1.ipynb  RNN_demo.ipynb
Materials/LLM/: LLM Lecture 2.ipynb
perf_engineering_hw_2-1/: Distributed_Training_Puzzles.ipynb  allreduce_example.py  allreduce_naive.py  test_ring_allreduce.py
perf_engineering_hw_2-2/: Distributed_Training_Puzzles.ipynb
perf_enginnering_hw_2/: Distributed_Training_Puzzles.ipynb  allreduce_example.py  allreduce_naive.py  ring_allreduce.py  test_ring_allreduce.py
