[project]
name = "nebius-ai-performance-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "ipython>=9.12.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "optuna>=4.8.0",
    "pip>=26.0.1",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
