[project]
name = "llm-architectures-hometask-1"
version = "0.1.0"
description = "LLM Architectures Homework 1 - Optimization in PyTorch"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "ipykernel>=7.2.0",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
